kubernetes/ingress/github-actions-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-actions-k8s-ingress
spec:
  ingressClassName: traefik

  rules:
  - host: app.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: github-actions-k8s-deploy-lab-service
            port:
              number: 80
